--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nebular/auth": "^11.0.0",
     "@nebular/eva-icons": "^11.0.0",
     "@nebular/theme": "^11.0.0",
+    "angular-in-memory-web-api": "^0.16.0",
     "eva-icons": "^1.1.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
