--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@angular/router": "^15.2.0",
     "@nebular/auth": "^11.0.0",
     "@nebular/eva-icons": "^11.0.0",
+    "@nebular/security": "^11.0.0",
     "@nebular/theme": "^11.0.0",
     "angular-in-memory-web-api": "^0.16.0",
     "eva-icons": "^1.1.3",
+    "ng-starrating": "^1.0.20",
+    "ngx-star-rating": "^2.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
