--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "angular-in-memory-web-api": "^0.16.0",
     "eva-icons": "^1.1.3",
     "ng-starrating": "^1.0.20",
+    "ngx-pipes": "^3.2.2",
     "ngx-star-rating": "^2.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
